# ImGui-Yandex-Map

./: CMakeLists.txt  README.md  et --hard df2b8c3
YandexApi/: CMakeLists.txt  YandexData.cpp  YandexData.h
src/: CMakeLists.txt  ImOsmDemoApp.cpp  ImOsmDemoApp.h  ImOsmMarkPanel.cpp  ImOsmMarkPanel.h  ImOsmMarkRenderer.cpp  ImOsmMarkRenderer.h  ThreadWorker.cpp  ThreadWorker.h  main.cpp
